--- a/index.html
+++ b/index.html
@@ -5,23 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>СамокатДВ</title>
 </head>
 <body>
     <header class="header">
-        <img src="/assets/images/logo.svg" alt="logo">
-        <nav>
-            <a href="">ГЛАВНАЯ</a>
-            <a href="">ОФОРМИТЬ ЗАКАЗ</a>
-        </nav>
-    </header>
+            <nav class="nav">
+                <a href="">ГЛАВНАЯ</a>
+                <a href="">ОФОРМИТЬ ЗАКАЗ</a>
+            </nav>
+            <h3>Инструкция по использованию электро-самоката:</h3>
     <ul>
-        <li>1</li>
-        <li>2</li>
+        <li>Перевести откидную ножку в горизонтальное положение;</li>
+        <li>Вставить ключ зажигания и повернуть его в рабочее положение;</li>
+        <li>Поставить одну ногу на подножие, оттолкнуться от поверхности вперед другой ногой;</li>
+        <li>Поворачивайте рукоятку управления мощности чтобы увеличить скорость движения;</li>
+        <li>Для остановки необходимо отпустить рукоятку управления мощностью и плавно зажать рычаг тормоза под левой рукояткой.</li>
     </ul>
-    <ol>
-        <li>1</li>
-        <li>2</li>
-    </ol>
+        <h3>Наши электро-самокаты:</h3>
+            <div>
+                <img src="./assets/images/bot.svg">
+            </div>
+        <div>
+            <h2>Наши контакты</h2>
+                <span>г. Хабаровск, ул. Пионерская 1, корпус 5, 3 этаж</span>
+                <span>+7(924)123-45-67</span>
+                <span>+7(4212)12-34-56</span>   
+    </header>
+            <div class="pic">
+                <img class="logo" src="/assets/images/logo.svg" alt="logo">
+                <img class="kart" src="./assets/images/back.svg" alt="bike">
+                    <div class="text">
+                        <h1>Аренда электро-самокатов в хабаровске по лучшим ценам</h1>
+                    </div>
+            </div>
 </body>
 </html>
