--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="">ОФОРМИТЬ ЗАКАЗ</a>
             </nav>
             <h3>Инструкция по использованию электро-самоката:</h3>
-    <ul>
+    <ul class="spisok">
         <li>Перевести откидную ножку в горизонтальное положение;</li>
         <li>Вставить ключ зажигания и повернуть его в рабочее положение;</li>
         <li>Поставить одну ногу на подножие, оттолкнуться от поверхности вперед другой ногой;</li>
@@ -23,7 +23,7 @@
     </ul>
         <h3>Наши электро-самокаты:</h3>
             <div>
-                <img src="./assets/images/bot.svg">
+                <img id="print" src="./assets/images/bot.svg">
             </div>
         <div>
             <h2>Наши контакты</h2>
