--- a/index.html
+++ b/index.html
@@ -9,37 +9,51 @@
 </head>
 <body>
     <header class="header">
-            <nav class="nav">
-                <a href="">ГЛАВНАЯ</a>
-                <a href="">ОФОРМИТЬ ЗАКАЗ</a>
-            </nav>
+        <img class="header_logo" src="/img/logo.svg" alt="logo">
+        <nav class="header_nav">
+            <a class="header_nav_b1" href="/">ГЛАВНАЯ</a>
+            <a class="header_nav_b2" href="/">ОФОРМИТЬ ЗАКАЗ</a>
+        </nav>
     </header>
-        <div class="pic">
-            <img class="logo" src="/assets/images/logo.svg" alt="logo">
-            <img class="kart" src="./assets/images/back.svg" alt="bike">
-                <div class="text">
+
+    <div class="block">
+        <div class="block_left">
+            <div class="block_left_window">
+                <img src="/img/title.png" alt="background">
+                <div class="block_left_window_text">
                     <h1>Аренда электро-самокатов в хабаровске по лучшим ценам</h1>
                 </div>
+            </div>
         </div>
-        <div>
-            <h3>Инструкция по использованию электро-самоката:</h3>
-            <ul class="spisok">
-                <li>Перевести откидную ножку в горизонтальное положение;</li>
-                <li>Вставить ключ зажигания и повернуть его в рабочее положение;</li>
-                <li>Поставить одну ногу на подножие, оттолкнуться от поверхности вперед другой ногой;</li>
-                <li>Поворачивайте рукоятку управления мощности чтобы увеличить скорость движения;</li>
-                <li>Для остановки необходимо отпустить рукоятку управления мощностью и плавно зажать рычаг тормоза под левой рукояткой.</li>
-            </ul>
-        </div>
-        <div>
-                <h3>Наши электро-самокаты:</h3>
-                <img id="print" src="./assets/images/bot.svg">
-        </div>
-        <div>
-            <h2>Наши контакты</h2>
-                <span>г. Хабаровск, ул. Пионерская 1, корпус 5, 3 этаж</span>
+
+        <div class="block_right">
+            <h2 class="block_right_text">Инструкция по использованию электро-самоката:</h2>
+            <div>
+                <ul class="block_right_list">
+                    <li>Перевести откидную ножку в горизонтальное положение;</li>
+                    <li>Вставить ключ зажигания и повернуть его в рабочее положение;</li>
+                    <li>Поставить одну ногу на подножие, оттолкнуться от поверхности вперед другой ногой;</li>
+                    <li>Поворачивайте рукоятку управления мощности чтобы увеличить скорость движения;</li>
+                    <li>Для остановки необходимо отпустить рукоятку управления мощностью и плавно зажать рычаг тормоза под левой рукояткой.</li>
+                </ul>
+            </div>
+            <div class="buttom">
+                <h2>Наши электро-самокаты:</h2>
+                <img class="bike" src="/img/nav.png" alt="bike">
+            </div>
+            <div>
+                <h2>Наши контакты</h2>
+            </div>
+            <div>
+                <p>г. Хабаровск, ул. Пионерская 1, корпус 5, 3 этаж</p>
+            </div>
+            <div>
                 <span>+7(924)123-45-67</span>
-                <span>+7(4212)12-34-56</span>   
+                <span>+7(4212)12-34-56</span>
+            </div>
         </div>
+
+    </div>
+
 </body>
 </html>
